<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/logo"
    android:orientation="vertical"
    tools:context=".QuizPage">

    <!--<TextView-->
    <!--android:id="@+id/tvEnglish"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_marginStart="8dp"-->
    <!--android:layout_marginTop="8dp"-->
    <!--android:layout_marginEnd="8dp"-->
    <!--android:layout_marginBottom="8dp"-->
    <!--android:text="> English"-->
    <!--android:paddingRight="10sp"-->
    <!--android:paddingLeft="10sp"-->
    <!--android:textStyle="italic"-->
    <!--android:textColor="#AF9797"-->
    <!--android:textSize="35sp"-->
    <!--app:layout_constraintBottom_toBottomOf="parent"-->
    <!--app:layout_constraintEnd_toEndOf="parent"-->
    <!--app:layout_constraintHorizontal_bias="0.086"-->
    <!--app:layout_constraintStart_toStartOf="parent"-->
    <!--app:layout_constraintTop_toTopOf="parent"-->
    <!--app:layout_constraintVertical_bias="0.015" />-->

    <!--<TextView-->
    <!--android:id="@+id/tvMaths"-->
    <!--android:layout_width="wrap_content"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_marginStart="8dp"-->
    <!--android:layout_marginTop="8dp"-->
    <!--android:layout_marginEnd="8dp"-->
    <!--android:layout_marginBottom="8dp"-->
    <!--android:text="> Maths"-->
    <!--android:paddingRight="10sp"-->
    <!--android:paddingLeft="10sp"-->
    <!--android:textColor="#799965"-->
    <!--android:textSize="35sp"-->
    <!--app:layout_constraintBottom_toBottomOf="parent"-->
    <!--app:layout_constraintEnd_toEndOf="parent"-->
    <!--app:layout_constraintHorizontal_bias="0.081"-->
    <!--app:layout_constraintStart_toStartOf="parent"-->
    <!--app:layout_constraintTop_toTopOf="parent"-->
    <!--app:layout_constraintVertical_bias="0.164" />-->


    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="0"
        android:alignmentMode="alignMargins"
        android:columnCount="2"
        android:columnOrderPreserved="false"
        android:padding="14dp"
        android:rowCount="2">

        <!--Row 1-->


        <!--column 1-->
        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="10dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="16dp"
                android:orientation="vertical">


                <ImageView
                    android:id="@+id/img_english"
                    android:layout_width="wrap_content"
                    android:layout_height="140dp"
                    android:layout_marginTop="30dp"
                    android:src="@drawable/english_two"/>

                <TextView
                    android:id="@+id/tvEnglish"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="15dp"
                    android:text="@string/english"
                    android:textAlignment="center"
                    android:textColor="#000"
                    android:textSize="30sp"
                    android:textStyle="bold|italic" />


            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <!--column 2-->
        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"

                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="16dp"
                android:orientation="vertical">


                <ImageView
                    android:id="@+id/img_maths"
                    android:layout_width="wrap_content"
                    android:layout_height="180dp"
                    android:src="@drawable/mathematics"
                    android:layout_marginTop="10dp"
                    />


                <TextView
                    android:id="@+id/tvMaths"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="5dp"
                    android:text="@string/maths"
                    android:textAlignment="center"
                    android:textColor="#000"
                    android:textSize="30sp"
                    android:textStyle="bold|italic" />


            </LinearLayout>

        </androidx.cardview.widget.CardView>


        <!--Row 2-->


        <!--column 1-->
        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="20dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="16dp"
                android:orientation="vertical">


                <ImageView
                    android:id="@+id/img_science"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/science"/>

                <TextView
                    android:id="@+id/tvScience"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/science"
                    android:textAlignment="center"
                    android:textColor="#000"
                    android:textSize="25sp"
                    android:textStyle="bold|italic" />


            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <!--column 2-->
        <androidx.cardview.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_rowWeight="1"
            android:layout_columnWeight="1"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="16dp"
            app:cardCornerRadius="8dp"
            app:cardElevation="8dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal|center_vertical"
                android:layout_margin="16dp"
                android:orientation="vertical">

                <ImageView
                android:id="@+id/img_home"
                android:src="@drawable/home"
                android:layout_gravity="center_horizontal"
                android:layout_width="wrap_content"
                android:layout_height="180dp" />

                <TextView
                    android:id="@+id/tvHome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="7dp"
                    android:text="@string/home"
                    android:textAlignment="center"
                    android:textColor="#000"
                    android:textSize="20sp"
                    android:textStyle="bold|italic" />


            </LinearLayout>

        </androidx.cardview.widget.CardView>


    </GridLayout>

</LinearLayout>